--- a/C++面向对象.tex
+++ b/C++面向对象.tex
@@ -14,6 +14,7 @@
 \usepackage[a4paper]{geometry}
 \usepackage{url}
 \usepackage[most]{tcolorbox}
+\usepackage{pgf-umlcd}
 % \usepackage{minted}
 
 \makeatletter
@@ -201,6 +202,9 @@
 
 \setcounter{page}{1}
 
-\input{chapters/chapter1}
+% \input{chapters/chapter1}
+% \input{chapters/chapter2}
+% \input{chapters/chapter3}
+\input{chapters/chapter4}
 
 \end{document}
