--- a/C++面向对象.tex
+++ b/C++面向对象.tex
@@ -205,6 +205,9 @@
 % \input{chapters/chapter1}
 % \input{chapters/chapter2}
 % \input{chapters/chapter3}
-\input{chapters/chapter4}
+% \input{chapters/chapter4}
+% \input{chapters/chapter5}
+% \input{chapters/chapter6}
+\input{chapters/chapter7}
 
 \end{document}
