--- a/C++.tex
+++ b/C++.tex
@@ -245,8 +245,8 @@
 \input{chapters/chapter2}
 \input{chapters/chapter3}
 \input{chapters/chapter4}
-% \input{chapters/chapter5}
-% \input{chapters/chapter6}
+\input{chapters/chapter5}
+\input{chapters/chapter6}
 % \input{chapters/chapter7}
 % \input{chapters/chapter8}
 % \input{chapters/chapter9}
