--- a/C++.tex
+++ b/C++.tex
@@ -247,7 +247,7 @@
 \input{chapters/chapter4}
 \input{chapters/chapter5}
 \input{chapters/chapter6}
-% \input{chapters/chapter7}
+\input{chapters/chapter7}
 % \input{chapters/chapter8}
 % \input{chapters/chapter9}
 % \input{chapters/chapter11}
