--- a/C++.tex
+++ b/C++.tex
@@ -248,8 +248,8 @@
 \input{chapters/chapter5}
 \input{chapters/chapter6}
 \input{chapters/chapter7}
-% \input{chapters/chapter8}
-% \input{chapters/chapter9}
+\input{chapters/chapter8}
+\input{chapters/chapter9}
 % \input{chapters/chapter11}
 % \input{chapters/chapter12}
 % \input{chapters/chapter13}
