--- a/C++.tex
+++ b/C++.tex
@@ -250,6 +250,7 @@
 \input{chapters/chapter7}
 \input{chapters/chapter8}
 \input{chapters/chapter9}
+\input{chapters/chapter10}
 % \input{chapters/chapter11}
 % \input{chapters/chapter12}
 % \input{chapters/chapter13}
